# FlashOCC2

./: .gitignore  .gitmodules  MANIFEST.in  README.md  README_CN.md  TODO.md  hello_flashocc2.py  plan.md  plan_f.md  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_cpu.txt  setup.py
configs/: flashocc_convnext_bas_dinov3.py  flashocc_convnext_small_dinov3.py  flashocc_convnext_tiny_dinov3.py  flashocc_convnext_tiny_dinov3_sky_freespace.py  flashocc_r50.py
configs/_base_/datasets/: nus-3d.py
configs/flashocc/: flashocc-r50.py
configs/flashocc2/: flashocc2-ConvNext-B.py  flashocc2-r50-LSS-B.py
doc/: architecture.md  bev_pool_v3_optimization.md  install.md  nuscenes_data.md  sky_freespace.md  testing.md  train.md  training.md
docs/: install.md
experiment/flashocc2-resnet-LSS-1D/: dataset.py  loss.py  model.py  optimizer.py  scheduler.py  trainner.py  visualizer.py
flashocc2/: __init__.py
flashocc2/core/evaluation/: occ_metrics.py
flashocc2/datasets/: __init__.py  loading.py  nuscenesSegDataset.py  nuscenes_custom.py  nuscenes_occ_dataset.py  pack.py
flashocc2/datasets/transforms/: __init__.py  loading.py  pack.py
flashocc2/eval/: evaluate.py
flashocc2/models/: __init__.py  orchestrator.py
flashocc2/models/backbones/: __init__.py  resnet.py
flashocc2/models/dense_heads/: bev_centerpoint_head.py  bev_occ_head.py
flashocc2/models/detectors/: OCCHead.py  __init__.py  bevdepth.py  bevdepth4d.py  bevdet.py  bevdet4d.py  bevdet_occ.py  bevstereo4d.py
flashocc2/models/losses/: __init__.py  cross_entropy_loss.py  focal_loss.py
flashocc2/models/necks/: LSS.py  ViewTransformer.py  ViewTransformerLSSBEVDepth.py  __init__.py  fpn.py  inverse_matrixVT.py  lss_fpn.py  view_transformer.py
flashocc2/ops/: __init__.py
lib/: setup.py
lib/cfg/: base.py
lib/datasets/: augmentation.py  openocc.py
lib/models/: activation.py  backbone.py  block.py  init.py  loss.py  lss_encoder.py  occ_head.py  optimizer.py
lib/utils/: logger.py  vis.py
lib/vis/: image_draw.py
src/flashocc/: __init__.py  constants.py
src/flashocc/config/: __init__.py  lazy.py  types.py
src/flashocc/core/: __init__.py  base_module.py  checkpoint.py  dist.py  env.py  fp16.py  functional.py  hooks.py  io.py  log.py  nn.py  registry.py
src/flashocc/datasets/: __init__.py  builder.py  (+4 more)
tools/: analyze_class_distribution.py  bench_bev_pool.py  bench_dali_decode.py  bench_dataloader.py  bench_ddp.py  bench_ddp_sweep.py  collect_torch_env.py  create_data.py  create_data_OpenOccupancy.py  create_data_bevdet.py  create_data_flashocc2.py  delete_pycache.py  dist_generate_sky_masks.sh  dist_test.sh  dist_train.sh  export_ep.py  export_ncnn.py  export_onnx.py  export_pt.py  export_ts.py  generate_depth_maps.py  generate_sky_masks.py  profile_analysis.ipynb  test.py  train.py  train_profile.py  visualize_features.py
tools/dataset_converters/: update_infos_to_v2.py
(+57 files in other folders)
